<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".UploadPostActivity"
    android:background="#FDEDE3">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/upload_post_bar">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/upload_post_toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_cancel"
                    android:id="@+id/upload_post_close"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="POST"
                    android:id="@+id/upload_post_post"
                    android:textSize="16sp"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorPrimaryDark"/>

            </RelativeLayout>


        </Toolbar>



    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        >

        <Utils.SquareImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/upload_post_image_added"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:textColor="@color/colorPrimaryDark"
            android:hint="Description"
            android:padding="10dp"
            android:maxLines="5"
            android:id="@+id/upload_post_description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:hint="Location"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:background="@drawable/edittext_background"
            android:id="@+id/tvPlace"/>

        <Button
            android:id="@+id/upload_post_add_location_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="ADD LOCATION" />




    </LinearLayout>




</LinearLayout>