<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDEDE3">
    <RelativeLayout
        android:id="@+id/relativeLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/snippet_photo_toolbar" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">
        <ImageView
            android:id="@+id/launch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:foregroundGravity="center"
            android:src="@drawable/camera_photo" />

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Press icon to take photo."
        android:textColor="#4E260E"
        android:textSize="25sp"
        android:foregroundGravity="center"/>

</RelativeLayout>