<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDEDE3"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container_edit_pview">

        <RelativeLayout
            android:id="@+id/relativeTop_pview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#F99F63"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username_action_menu_pview"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/usernameTxt_pview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text=""
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.ActionMenuView
                    android:id="@+id/profile_menu_view_pview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:menu="@menu/profile_menu" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_below="@+id/username_action_menu_pview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/top_bar_pview"
                        android:padding="16dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image_pview"
                            android:layout_width="92dp"
                            android:layout_height="96dp"
                            app:civ_border_width="1dp"
                            app:civ_border_color="@color/colorPrimaryDark" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="20dp"
                            android:paddingRight="4dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/posts_pview"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:textColor="@color/colorPrimaryDark"
                                        android:textSize="14sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="posts" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="31dp"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/followers_pview"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:textColor="@color/colorPrimaryDark"
                                        android:textSize="14sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="followers" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="30dp"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/following_pview"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:textColor="@color/colorPrimaryDark"
                                        android:textSize="14sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="following" />

                                </LinearLayout>

                            </LinearLayout>

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_marginTop="8dp"
                                android:id="@+id/UnFollow_button_pview"
                                android:textAlignment="center"
                                android:layout_gravity="center"
                                android:layout_marginRight="10dp"
                                android:text="UnFollow"
                                android:background="@drawable/button_background"
                                android:visibility="gone"/>
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_marginTop="8dp"
                                android:id="@+id/Follow_button_pview"
                                android:textAlignment="center"
                                android:layout_marginRight="10dp"
                                android:layout_gravity="center"
                                android:text="Follow"
                                android:background="@drawable/button_background" />


                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:id="@+id/mid_bar_pview"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:maxLines="1"
                            android:id="@+id/fullname_profile_pview"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryDark"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:id="@+id/bio_profile_pview"
                            android:maxLines="5"
                            android:textColor="@color/colorPrimaryDark"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:id="@+id/website_link_profile_pview"
                            android:maxLines="5"
                            android:autoLink="web"
                            android:linksClickable="true"
                            android:textColor="@color/colorPrimaryDark"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/last_bar_pview"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="3dp"
                            android:layout_marginRight="3dp"
                            android:background="@color/colorPrimaryDark">
                        </TextView>

                    </LinearLayout>

                    <GridView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/grid_view_profile_pview"
                        android:numColumns="3"
                        android:padding="3dp"
                        android:gravity="center"
                        android:verticalSpacing="1.5dp"
                        android:horizontalSpacing="1.5dp"
                        android:stretchMode="none"/>


                </LinearLayout>

            </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relativeParent_pview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/bottom_navigation_bar" />
            </RelativeLayout>

        </RelativeLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
