...
                android:layout_marginTop="10dp"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="0.5dp" />


            <TextView
                android:id="@+id/username_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/profile_photo_main"
                android:textColor="@color/colorPrimaryDark"
...
